-Fixed group spacing

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -178,7 +178,7 @@ button.group {
   border-radius: 1rem;
   color: #ffffff;
   font-size: 1.5rem;
-  margin-right: 1rem;
+  margin: 1rem;
   padding: 0.5rem 1.5rem;
   text-decoration: none;
 }
